[package]
name = "bevy_3ds"
version = "0.1.0"
edition = "2021"
authors = [""]
description = "A library for using Bevy on the 3DS"

[dependencies]
ctru-rs = { git = "https://github.com/Meziu/ctru-rs.git" }

# This library targets Bevy main for now, since it requires a fork of bevy_ecs
[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
branch = "main"
default-features = false

# For now, require a fork of bevy_ecs: https://github.com/bevyengine/bevy/pull/4452
# This also requires bevy_reflect and a few other crates to work properly
[patch."https://github.com/bevyengine/bevy.git"]
bevy_ecs = { git = "https://github.com/ian-h-chamberlain/bevy.git", branch = "entity-32bit-cursor" }
bevy_reflect = { git = "https://github.com/ian-h-chamberlain/bevy.git", branch = "entity-32bit-cursor" }

# Improve performance of the Bevy runtime
[profile.dev.package.bevy]
opt-level = 1
