[package]
name = "bevy_3ds"
version = "0.1.0"
edition = "2021"
authors = []
description = "A library for using Bevy on the 3DS"

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git" }

[dependencies.bevy]
version = "0.10.0"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    # "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",
    # "x11",
    # "filesystem_watcher",
    # "android_shared_stdcxx",
    # "tonemapping_luts",
]

# Improve performance of the Bevy runtime
[profile.dev.package.bevy]
opt-level = 1
